# openCVDemo

app/: build.gradle
app/src/androidTest/java/com/longforus/opencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  CheckCode.cpp  CheckCode.h  Convert.h  ConvertBitMap.cpp  native-lib.cpp
app/src/main/java/com/longforus/opencv/: BitMapAdapter.kt  CodeHints.java  JniMethod.java  MainActivity.kt  decodeQR.kt
app/src/main/res/layout/: activity_main.xml  item_code.xml
app/src/test/java/com/longforus/opencv/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
